substrate/frame/support/test/tests/construct_runtime_v2_ui/pallets_struct.stderr
error: Invalid frame::pallets, expected struct definition
  --> tests/construct_runtime_v2_ui/pallets_struct.rs:23:14
   |
23 |     #[frame::pallets]
   |              ^^^^^^^
